Add project completion feature for admins
Implemented backend and frontend support for manually concluding projects by admins. Added a new endpoint in ProgettoController and corresponding service logic in ProgettoService. Updated NavigationController and ProjectsService to support the new action in the frontend.